--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,12 @@
 {
-  "name": "My Vinyl Collection",
+  "name": "Vinyl Vault",
   "short_name": "Vinyl",
   "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#ffffff",
-  "theme_color": "#ffffff",
+  "background_color": "#CDEBDF",
+  "theme_color": "#CDEBDF",
   "icons": [
-    {
-      "src": "icon-192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "icon-512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
+    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
