--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,20 @@
 {
   "name": "Vinyl Vault",
-  "short_name": "Vinyl",
-  "start_url": "./index.html",
+  "short_name": "VinylVault",
+  "start_url": "index.html",
   "display": "standalone",
-  "background_color": "#CDEBDF",
-  "theme_color": "#CDEBDF",
+  "background_color": "#c8eadf",
+  "theme_color": "#1f6b57",
   "icons": [
-    { "src": "icon-192.png", "sizes": "192x192", "type": "image/png" },
-    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
